@@ -1,3 +1,13 @@
+Copyright (C)  2017 Heiko Stamer <HeikoStamer@gmx.net>
+
+Permission is granted to copy, distribute and/or modify this document under
+the terms of the GNU Free Documentation License, Version 1.3 or any later
+version published by the Free Software Foundation; with no Invariant Sections,
+no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
+in the sources of this package and additionally can be obtained from Internet
+<https://www.gnu.org/licenses>.
+
+
 OpenBSD: some test programs may fail due to restrictive rlimits (kern.maxfiles)
 All: t-dkg and t-astc2 may fail due to missing synchronization inside protocols
 
