@@ -41,6 +41,17 @@ Please report other bugs via <http://savannah.nongnu.org/bugs/?group=libtmcg>
 .PP
 Home page of LibTMCG: <http://www.nongnu.org/libtmcg/>
 
+.SH "COPYRIGHT"
+.TP
+Copyright (C)  2017 Heiko Stamer <HeikoStamer@gmx.net>
+.PP
+Permission is granted to copy, distribute and/or modify this document under
+the terms of the GNU Free Documentation License, Version 1.3 or any later
+version published by the Free Software Foundation; with no Invariant Sections,
+no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
+in the sources of this package and additionally can be obtained from Internet
+<https://www.gnu.org/licenses>.
+
 .SH "SEE ALSO"
 .BR dkg\-generate (1),
 .BR dkg\-decrypt (1),
