@@ -124,6 +124,17 @@ dkg-revoke -r 1 -w 10 3PT18Z2345NA6FM86BKVJ32DK88KXF0YWKTDPPQX1QJMBPEF4530 S41SN
 .PP
 At least 2s+1 parties must run such a process with the same revocation reason (here: key is superseded). The program waits ten minutes before the revocation protocol is started, because establishing a CADET channel with GNUnet may take some time.
 
+.SH "COPYRIGHT"
+.TP
+Copyright (C)  2017 Heiko Stamer <HeikoStamer@gmx.net>
+.PP
+Permission is granted to copy, distribute and/or modify this document under
+the terms of the GNU Free Documentation License, Version 1.3 or any later
+version published by the Free Software Foundation; with no Invariant Sections,
+no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
+in the sources of this package and additionally can be obtained from Internet
+<https://www.gnu.org/licenses>.
+
 .SH "SEE ALSO"
 .BR dkg\-generate (1),
 .BR dkg\-encrypt (1),
