@@ -1,3 +1,13 @@
+Copyright (C)  2006, 2007, 2009, 2015, 2016, 2017 Heiko Stamer <HeikoStamer@gmx.net>
+
+Permission is granted to copy, distribute and/or modify this document under
+the terms of the GNU Free Documentation License, Version 1.3 or any later
+version published by the Free Software Foundation; with no Invariant Sections,
+no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
+in the sources of this package and additionally can be obtained from Internet
+<https://www.gnu.org/licenses>.
+
+
 * [2017-09-05] DKG-tools: fixes upper limit of t-resilience by option "-t"
 * [2017-09-03] release 1.3.2 of LibTMCG
 * [2017-08-23] DKG-tools: added FIPS 186-4 compliance for dkg-gencrs
